# daflip

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml  ruff.toml
.github/scripts/: generate_changelog.py
.github/workflows/: README.md  ci.yml  docs.yml  generate-changelog.yml  lint.yml  publish.yml  semantic-release.yml  test.yml
docs/: changelog.md  index.md  usage.md
docs/api/: cli-reference.md
docs/development/: contributing.md  publishing.md  releasing.md
docs/getting-started/: installation.md  quick-start.md
docs/user-guide/: basic-usage.md
scripts/: generate_changelog_local.py
src/daflip/: __init__.py  cli.py  config.py  controllers.py  models.py  py.typed  services.py  utils.py
tests/: __init__.py  test_cli.py  test_config.py  test_integration.py  test_services.py  test_services_helpers.py  test_utils.py
