[project]
name = "daflip"
version = "0.1.0"
description = "A CLI tool for converting data files between formats."
authors = [{ name = "Vincent Grégoire", email = " vincent.gregoire@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "typer>=0.16.0",
    "xlrd>=2.0.2",
    "xlsxwriter>=3.2.5",
]


[project.scripts]
daflip = "daflip.cli:main"

[tool.uv]
# uv-specific options can be added here

[tool.ruff]
# Basic linting rules
lint.select = ["E", "F", "W", "I"]
lint.ignore = ["E501"]

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Line length
line-length = 88

# Same as Black.
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"


[build-system]
requires = ["uv", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.12.0",
]
